<resources>
    <string name="app_name">HeartAttackRisk</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="_41_a_50_anos">41 a 50 anos</string>
    <string name="heart_attack_risk_calculator">Heart Attack Risk Calculator</string>
    <string name="sua_idade">Sua Idade</string>
    <string name="_21_a_30_anos">21 a 30 anos</string>
    <string name="_31_a_40_anos">31 a 40 anos</string>
    <string name="_10_a_20_anos">10 a 20 anos</string>
    <string name="_51_a_60_anos">51 a 60 anos</string>
    <string name="acima_de_61">Acima de 61</string>
    <string name="sexo">Sexo</string>
    <string name="feminino_menos_que_40_anos">Feminino, menos que 40 anos.</string>
    <string name="feminino_de_40_a_50_anos">Feminino, de 40 a 50 anos.</string>
    <string name="feminino_mais_que_50_anos">Feminino, mais que 50 anos.</string>
    <string name="masculino">Masculino</string>
    <string name="masculino_de_baixa_estatura">Masculino de baixa estatura</string>
    <string name="masculino_de_baixa_estatura_calvo">Masculino de baixa estatura calvo</string>
    <string name="peso">Peso</string>
    <string name="inferior_a_2_5kg_peso_normal">Inferior a 2,5kg peso normal</string>
    <string name="inferior_a_2_3kg_peso_normal_e_2_3_acima">Inferior a 2,3kg peso normal e 2,3 acima</string>
    <string name="_2_4_9kg_acima_do_peso_normal">2,4 - 9kg acima do peso normal</string>
    <string name="_9_1_15_9kg_acima_do_peso_normal">9,1 - 15,9kg acima do peso normal</string>
    <string name="_16_22_9kg_acima_do_peso_normal">16 - 22,9kg acima do peso normal</string>
    <string name="mais_de_23kg_acima_do_peso_normal">mais de 23kg acima do peso normal</string>
    <string name="atividade_f_sica">Atividade Física</string>
    <string name="profissional_e_recreativo_intenso">Profissional e recreativo intenso</string>
    <string name="profissional_e_recreativo_moderado">Profissional e recreativo moderado</string>
    <string name="profissional_sedent_rio_e_recreativo_intenso">Profissional sedentário e recreativo intenso</string>
    <string name="profissional_sedent_rio_e_recreativo_moderado">Profissional sedentário e recreativo moderado</string>
    <string name="profissional_sedent_rio_e_recreativo_leve">Profissional sedentário e recreativo leve</string>
    <string name="sedent_rio_completo">Sedentário completo</string>
    <string name="fumo">Fumo</string>
    <string name="n_o_fumante">Não fumante</string>
    <string name="charuto_e_ou_cachimbo">Charuto e/ou cachimbo</string>
    <string name="_10_cigarros_ou_menos_p_dia">10 cigarros ou menos p/dia</string>
    <string name="_11_a_20_cigarros_ou_menos_p_dia">11 a 20 cigarros ou menos p/dia</string>
    <string name="_21_a_30_cigarros_ou_menos_p_dia">21 a 30 cigarros ou menos p/dia</string>
    <string name="mais_de_31_cigarros_por_dia">mais de 31 cigarros por dia</string>
    <string name="press_o">Pressão</string>
    <string name="sist_lica_de_100_a_119_mmhg">Sistólica de 100 a 119 mmHg</string>
    <string name="sist_lica_de_120_a_139_mmhg">Sistólica de 120 a 139 mmHg</string>
    <string name="sist_lica_de_140_a_159_mmhg">Sistólica de 140 a 159 mmHg</string>
    <string name="sist_lica_de_160_a_179_mmhg">Sistólica de 160 a 179 mmHg</string>
    <string name="sist_lica_de_180_a_199_mmhg">Sistólica de 180 a 199 mmHg</string>
    <string name="sist_lica_de_200_mmhg_ou_mais">Sistólica de 200 mmHg ou mais</string>
    <string name="doen_a_familiar">Doença familiar</string>
    <string name="n_mero_de_parentes_com_doen_a_card_aca">Número de parentes com doença cardíaca:</string>
    <string name="_0">0</string>
    <string name="_1_com_mais_de_60_anos">1 com mais de 60 anos</string>
    <string name="_2_com_mais_de_60_anos">2 com mais de 60 anos</string>
    <string name="_1_com_menos_de_60_anos">1 com menos de 60 anos</string>
    <string name="_2_com_menos_de_60_anos">2 com menos de 60 anos</string>
    <string name="_3_com_menos_de_60_anos">3 com menos de 60 anos</string>
    <string name="colesterol">Colesterol</string>
    <string name="abaixo_de_180_ou_0_gordura_animal">abaixo de 180. Ou 0% gordura animal</string>
    <string name="de_181_a_205_ou_10_gordura_animal">de 181 a 205. Ou 10% gordura animal</string>
    <string name="de_206_a_230_ou_20_gordura_animal">de 206 a 230. Ou 20% gordura animal</string>
    <string name="de_231_a_255_ou_30_gordura_animal">de 231 a 255. Ou 30% gordura animal</string>
    <string name="de_256_a_280_ou_40_gordura_animal">de 256 a 280. Ou 40% gordura animal</string>
    <string name="acima_de_281_ou_50_gordura_animal">Acima de 281. Ou 50% gordura animal</string>
    <string name="resultado">Resultado</string>
    <string name="voltar_ao_in_cio">Voltar ao início</string>
    <string name="_2_risco_baixo_12_a_17">2 - Risco baixo: 12 a 17</string>
    <string name="_6_risco_muito_alto_41_a_62">6 - Risco muito alto: 41 a 62</string>
    <string name="_5_risco_alto_32_a_40">5 - Risco alto: 32 a 40</string>
    <string name="_4_risco_moderado_25_a_31">4 - Risco moderado: 25 a 31</string>
    <string name="_1_sem_risco_6_a_11">1 - Sem risco: 6 a 11</string>
    <string name="valor_resultado">Valor Resultado</string>
    <string name="_3_risco_m_dio_18_a_24">3 - Risco médio: 18 a 24</string>
</resources>